--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,21 @@
 
             </nav>
             <ul class="contact-header list">
-                <li class="contact-item"><a class="contact link accent"
-                        href="meilto:info@example.com">info@example.com</a></li>
-                <li class="contact-item"><a class="contact link accent" href="tel:+380991111111">+38 099 111 11 11</a>
+                <li class="contact-item"><a class="contact link accent" href="meilto:info@example.com">
+                        <svg class="contact-list-icon accent" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope-hover">
+
+                            </use>
+
+                        </svg>info@example.com</a>
+                </li>
+                <li class="contact-item"><a class="contact link accent" href="tel:+380991111111">
+                        <svg class="contact-list-icon accent" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone">
+
+                            </use>
+
+                        </svg>+38 099 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -57,7 +69,7 @@
                 </ul>
                 <ul class="portfolio-list list">
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio1.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Технокряк</h2>
@@ -67,7 +79,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio2.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
@@ -77,7 +89,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio3.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Ресторан Seafood</h2>
@@ -87,7 +99,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio4.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Проект Prime</h2>
@@ -155,22 +167,70 @@
 
     <footer class="footer">
         <div class="container">
-            <a class="logo link" href="./index.html" lang="en"><span class="logo-part">Web</span>Studio</a>
-            <address>
-                <ul class="list">
-                    <li class="address-item">
-                        <a class="footer-link link accent" href="https://goo.gl/maps/G8qJHYec9bDJNxMg7" target="_blank"
-                            rel="noopener noreferrer">г. Киев,
-                            пр-т Леси Украинки, 26</a>
+            <div class="block">
+                <a class="logo link" href="./index.html" lang="en"><span class="logo-part">Web</span>Studio</a>
+                <address class="address">
+                    <ul class="list">
+                        <li class="address-item">
+                            <a class="footer-link link accent" href="https://goo.gl/maps/G8qJHYec9bDJNxMg7"
+                                target="_blank" rel="noopener noreferrer">г. Киев,
+                                пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address-item">
+                            <a class="footer-link link accent contact" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                        <li class="address-item">
+                            <a class="footer-link link accent contact"
+                                href="meilto:info@example.com">info@example.com</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="block">
+                <h2 class="section-title">Присоединяйтесь</h2>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram">
+
+                                </use>
+
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-item">
-                        <a class="footer-link link accent contact" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter">
+
+                                </use>
+
+                            </svg>
+                        </a>
                     </li>
-                    <li class="address-item">
-                        <a class="footer-link link accent contact" href="meilto:info@example.com">info@example.com</a>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook">
+
+                                </use>
+
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin">
+
+                                </use>
+
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
 
     </footer>
