--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="contact-header list">
                 <li class="contact-item"><a class="contact link accent" href="meilto:info@example.com">
                         <svg class="contact-list-icon accent" width="16" height="12">
-                            <use href="./images/icons.svg#icon-envelope-hover">
+                            <use href="./images/icons.svg#icon-envelope">
 
                             </use>
 
@@ -427,7 +427,7 @@
                 </address>
             </div>
             <div class="block">
-                <h2 class="section-title">Присоединяйтесь</h2>
+                <p class="section-title">Присоединяйтесь</p>
                 <ul class="social-list list">
                     <li class="social-list-item">
                         <a class="social-list-link" href="">
