--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio5.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Проект Boxes</h2>
@@ -119,7 +119,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio6.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
@@ -129,7 +129,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio7.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Издание Limited Edition</h2>
@@ -139,7 +139,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio8.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Проект LAB</h2>
@@ -149,7 +149,7 @@
                         </a>
                     </li>
                     <li class="portfolio-list-item">
-                        <a class="link" href="">
+                        <a class="portfolio-list-link link" href="">
                             <img src="./images/portfolio9.jpg" alt="" width="370">
                             <div class="portfolio-card">
                                 <h2 class="portfolio-title">Growing Business</h2>
@@ -187,7 +187,7 @@
                 </address>
             </div>
             <div class="block">
-                <h2 class="section-title">Присоединяйтесь</h2>
+                <p class="section-title">Присоединяйтесь</p>
                 <ul class="social-list list">
                     <li class="social-list-item">
                         <a class="social-list-link" href="">
